<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".ui.cleanfirestorelogin.presentation.login.view.SignInActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/GuideLine"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".45"/>

    <ImageView
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_100sdp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_cine"
        app:layout_constraintBottom_toTopOf="@+id/txt_welcome"
        app:layout_constraintEnd_toEndOf="@+id/txt_welcome"
        app:layout_constraintStart_toStartOf="@+id/txt_welcome"
        app:tint="@color/colorText"
        android:layout_marginBottom="@dimen/_8sdp"/>

    <TextView
        android:id="@+id/txt_welcome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_24sdp"
        android:gravity="center"
        android:includeFontPadding="false"
        android:text="@string/welcome"
        android:textColor="@color/colorText"
        android:textSize="@dimen/_24sdp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/etxt_email"
        app:layout_constraintEnd_toEndOf="@+id/etxt_email"
        app:layout_constraintStart_toStartOf="@+id/etxt_email" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etxt_email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_8sdp"
        android:hint="@string/prompt_email"
        app:layout_constraintBottom_toTopOf="@+id/GuideLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:startIconDrawable="@drawable/ic_user"
        app:startIconTint="@color/colorText">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:textColor="@color/colorText" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etxt_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_password"
        app:layout_constraintEnd_toEndOf="@+id/etxt_email"
        app:layout_constraintStart_toStartOf="@+id/etxt_email"
        app:layout_constraintTop_toBottomOf="@+id/etxt_email"
        app:startIconDrawable="@drawable/ic_password"
        app:startIconTint="@color/colorText"
        app:endIconMode="password_toggle"


        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginHorizontal="@dimen/_8sdp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textColor="@color/colorText" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_signIn"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:text="@string/action_sign_in_short"
        app:layout_constraintEnd_toEndOf="@+id/etxt_password"
        app:layout_constraintStart_toStartOf="@+id/etxt_password"
        app:layout_constraintTop_toBottomOf="@+id/etxt_password" />

    <TextView
        android:id="@+id/etxt_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_marginHorizontal="@dimen/_8sdp"
        android:gravity="center"
        android:text="@string/don_t_have_an_account_register_now"
        android:textColor="@color/colorText"
        android:textSize="@dimen/_11ssp"

        app:layout_constraintEnd_toEndOf="@+id/btn_signIn"
        app:layout_constraintStart_toStartOf="@+id/btn_signIn"
        app:layout_constraintTop_toBottomOf="@+id/btn_signIn" />

    <ProgressBar
        android:id="@+id/progressBar_signIn"
        android:layout_width="@dimen/_24sdp"
        android:layout_height="@dimen/_24sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/etxt_register"
        app:layout_constraintStart_toStartOf="@+id/etxt_register"
        app:layout_constraintTop_toBottomOf="@+id/etxt_register" />


</androidx.constraintlayout.widget.ConstraintLayout>