<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.popcorn.ui.home.principal.PrincipalFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_navigation_home_to_detailFragment"
            app:destination="@id/detailFragment"
            app:enterAnim="@anim/nav_default_pop_enter_anim"
            app:exitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.example.popcorn.ui.search.SearchFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" >
        <action
            android:id="@+id/action_navigation_search_to_detailFragment"
            app:destination="@id/detailFragment"
            app:enterAnim="@anim/nav_default_pop_enter_anim"
            app:exitAnim="@anim/nav_default_pop_exit_anim"/>
        <argument
            android:name="tvShow"
            app:argType="com.example.popcorn.data.local.entity.TVShow" />
    </fragment>

    <fragment
        android:id="@+id/navigation_favorites"
        android:name="com.example.popcorn.ui.favorites.FavoritesFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_favorites">

        <action
            android:id="@+id/action_navigation_favorites_to_detailFragment"
            app:destination="@id/detailFragment"
            app:enterAnim="@anim/nav_default_pop_enter_anim"
            app:exitAnim="@anim/nav_default_pop_exit_anim" />

        <argument
            android:name="tvShow"
            app:argType="com.example.popcorn.data.local.entity.TVShow" />

        <argument
            android:name="position"
            app:argType="integer" />


    </fragment>

    <fragment
        android:id="@+id/detailFragment"
        android:name="com.example.popcorn.ui.home.detail.DetailFragment"
        android:label="detail_fragment"
        tools:layout="@layout/detail_fragment">

        <argument
            android:name="tvShow"
            app:argType="com.example.popcorn.data.local.entity.TVShow" />

        <action
            android:id="@+id/action_detailFragment_to_navigation_home"
            app:destination="@id/navigation_home"
            app:enterAnim="@anim/nav_default_pop_enter_anim"
            app:exitAnim="@anim/nav_default_pop_exit_anim"
            app:popUpTo="@id/navigation_home"
            app:popUpToInclusive="true" />

    </fragment>
</navigation>